# RingBuffer

./: README.md
RingBuffer_1/: CMakeLists.txt
RingBuffer_1/include/: ringbuffer.h
RingBuffer_1/src/: ringbuffer.cpp
RingBuffer_2/: CMakeLists.txt
RingBuffer_2/include/: ringbuffer.h
RingBuffer_2/src/: ringbuffer.cpp
RingBuffer_3/: CMakeLists.txt
RingBuffer_3/include/: ringbuffer.h
RingBuffer_3/src/: main.cpp  ringbuffer.cpp
RingBuffer_4/: stackoverflow.cpp
RingBuffer_4/RingBuffer_4/: RingBuffer_4.pro  main.cpp  ringbuffer.cpp  ringbuffer.h
RingBuffer_4/build-RingBuffer_4-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  RingBuffer_4
RingBuffer_4/build-RingBuffer_4-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
RingBuffer_4/build-RingBuffer_4-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QDebug.593E94DCC05B22D8.idx  QString.328E6612AF0A776C.idx  cstddef.337D34E624285F88.idx  cstdint.131423F6DD978BF6.idx  locale.h.5F1EA2E91D0CD92F.idx  main.cpp.EDABD8CE6E410417.idx  qalgorithms.h.23A3344C56DEAAD4.idx  qarraydata.h.250E5A2CD27FC86F.idx  qatomic_cxx11.h.0E634F0308AAA509.idx  qbytearray.h.428A4EEE45D0FE43.idx  qchar.h.2EB2E0ADE82DB95A.idx  (+39 more)
RingBuffer_5/RingBuffer_5/: RingBuffer_5.pro  cconsumer.cpp  cconsumer.h  cproducer.cpp  cproducer.h  global.cpp  global.h  main.cpp
RingBuffer_5/build-RingBuffer_5-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  RingBuffer_5  moc_cconsumer.cpp  moc_cproducer.cpp
RingBuffer_5/build-RingBuffer_5-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
(+222 files in other folders)
